2006-12-28  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-logout-p): Abolish.
	(shimbun-close): Follow the change above.

2006-12-27  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-post-message-page): New macro.
	(mixi-post-message-key-regexp): New constant.
	(mixi-post-message-succeed-regexp): Ditto.
	(mixi-post-message): New function.

2006-12-27  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-post-diary-id-regexp): Abolish.
	(mixi-post-diary-title-regexp): Ditto.
	(mixi-post-diary-body-regexp): Ditto.
	(mixi-post-key-regexp): Rename from `mixi-post-diary-key-regex'.
	(mixi-post-succeed-regexp): Rename from
	`mixi-post-diary-succeed-regexp'.
	(mixi-post-diary): Follow the change above.
	(mixi-post-topic-title-regexp): Abolish.
	(mixi-post-topic-body-regexp): Ditto.
	(mixi-post-topic-key-regexp): Ditto.
	(mixi-post-topic-succeed-regexp): Ditto.
	(mixi-post-topic): Follow the change above.
	(mixi-post-diary-comment-page): New function.
	(mixi-post-topic-comment-page): Ditto.
	(mixi-post-event-comment-page): Ditto.
	(mixi-post-comment): Ditto.

2006-12-27  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-post-diary-page): New macro.
	(mixi-post-diary): Use it and fix typo.
	(mixi-post-error): Add optional argument `object'.
	(mixi-post-topic-page): New macro.
	(mixi-post-topic-title-regexp): New constant.
	(mixi-post-topic-body-regexp): Ditto.
	(mixi-post-topic-key-regexp): Ditto.
	(mixi-post-topic-succeed-regexp): Ditto.
	(mixi-post-topic): New function.

2006-12-26  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-post-error): New error symbol.
	(mixi-post-error): New macro.
	(mixi-post-form): New macro.
	(mixi-make-form-data): New function.
	(mixi-url-retrieve): Add optional argument `extra-headers'.
	(mixi-url-post-form): New function.
	(mixi-w3m-post-form): Ditto.
	(with-mixi-post-form): New macro.
	(mixi-post-diary-key-regexp): New constant.
	(mixi-post-diary-id-regexp): Ditto.
	(mixi-post-diary-title-regexp): Ditto.